# web-scrape-api

./: Cargo.toml  shell.nix
src/: main.rs  scrape.rs
